<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item type="id" name="pane"/>
    <item type="id" name="element"/>
    
    <string name="frm_login_lang">语言</string>
    <string name="frm_login_net">网络</string>
    <string name="frm_login_net_lan">内网</string>
    <string name="frm_login_net_wan">外网</string>
    <string name="frm_login_server">服务器</string>
    <string name="frm_login_port">端口</string>
    <string name="frm_login_book">环境</string>
    <string name="frm_login_user">用户</string>
    <string name="frm_login_pwd">密码</string>
    <string name="frm_login_remember">记住登录</string>
    <string name="frm_login_dynsoft">深圳市华讯软件技术有限公司</string>
    <string name="frm_login_logining">正在登录</string>
    <string name="frm_login_lang_selector">选择语言</string>
    <string name="frm_login_net_selector">选择网络</string>
    <string name="frm_login_book_selector">选择账套</string>
    <string name="frm_login_cancel">取消</string>
    <string name="frm_login_miss_network">请选择网络</string>
    <string name="frm_login_miss_server">请输入服务器</string>
    <string name="frm_login_miss_port">请输入端口</string>
    <string name="frm_login_miss_book">请选择账套</string>
    <string name="frm_login_miss_user">请输入用户名</string>
    <string name="load_footer_text">更多...</string>
       <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string> 
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="album">相册</string>
    
    <string name="loadvideoactivity">加载视频</string>
	<string name="setparameteractivity">MES参数</string>
	<string name="scantestactivity">MES扫描</string>
	<string name="cardregistrationactivity">打卡登记</string>
	<string name="productionkanbanactivity">生产看板</string>
	<string name="locationcheckactivity">定位检查</string>
    <string name="checkreportactivity">功能测试</string>
	<string name="withdrawactivity">生产作业查询</string>
    <string name="employeemessageactivity">打卡人员信息</string>
    <string name="oqckanbanactivity">OQC看板</string>
    <string name="carrierbindactivity">载具绑定</string>
    <string name="smtlaserscanactivity">镭雕扫描</string>
    <string name="smtworktimeactivity">SMT标准工时</string>
    <string name="sopmatelactivity">机加工</string>
    <string name="sopallactivity">通用SOP</string>
    
    <string name="choose_one">请选择</string>

    <string name="serial_number">产品序列</string>
    <string name="designator">位号</string>
    <string name="defect_code">不良代码</string>
    <string name="defect_explanation">不良说明</string>
    <string name="default_type">不良类型</string>
    <string name="repair_method">维修方式</string>
    <string name="default_situation">不良情况</string>
    <string name="default_desc">不良描述</string>

    <string name="note">备注</string>
    <string name="cycle">周期</string>
    <string name="supplier">供应商</string>
    <string name="item_code">物料编码</string>
    <string name="title_item_code">物料编码:</string>
    <string name="item_name">物料名称</string>

    <string name="add_line">新增行</string>
    <string name="remove_line">删除行</string>
    <string name="send_notice">发送钉钉通知</string>
    <string name="enter_production_task_code_query">输入生产任务编码查询</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="un_commited">还没有提交成功，请等待。</string>
    <string name="fail_scan">FAIL扫描</string>
    <string name="no_set_group_binding_number">没有设置组合个数，请联系相关人员在QC工程图中维护</string>
    <string name="no_set_binding_number">没有设置绑定个数，请联系相关人员在QC工程图中维护</string>
    <string name="scan_tool_code_first">请先扫描工装条码</string>
    <string name="scan_error">扫描出错，请重新扫描</string>
    <string name="scan_repeat">扫描重复</string>
    <string name="only_one_bind">序号绑定只支持一个绑定序列号</string>
    <string name="scan_not_the_same_code">两次扫描的条码不一致</string>
    <string name="set_scan_code_zero">设置的扫描个数为零</string>
    <string name="scan_repeat_father">父件与当前条码重复</string>
    <string name="scan_error_the_same_type">扫描出错，扫描的线材为同一类型。</string>
    <string name="scan_error_children_count">扫描有误，扫描的子件数量与设置的不一致</string>
    <string name="scan_error_bind_count">扫描的绑定个数与设置的不一致</string>
    <string name="check_error">检查出错</string>
    <string name="first_item_error">首件出错</string>
    <string name="defect_registration">缺陷登记</string>
    <string name="commit_barcode_error">提交的二维码有误</string>
    <string name="please_choose">请选择</string>
    <string name="process_problem">制程问题</string>
    <string name="item_problem">物料问题</string>
    <string name="work_problem">人员作业问题</string>
    <string name="device_problem">设备问题</string>
    <string name="design_problem">设计问题</string>
    <string name="other_problem">其他</string>
    <string name="epc_size_check">EPC尺寸检测</string>
    <string name="height">整机高度(30-33.6mm)</string>
    <string name="lenght">整机长度(220±0.5mm)</string>
    <string name="width">整机宽度(95±0.5mm)</string>
    <string name="epc_appearance_check">EPC外观检查</string>
    <string name="qijiananzhuang">器件安装及焊锡质量</string>
    <string name="sanfangqi">三防漆涂覆</string>
    <string name="baijiaofugai">白胶覆盖</string>
    <string name="number_only">请输入纯数字</string>
    <string name="check_code_right">请确定输入的数据是否正确</string>
    <string name="the_code_into_repair">该条码已经进入外观维修</string>
    <string name="check_line_ok">请检查线材是否是完好的，有无破损。</string>
    <string name="scan_children_length_error">错误：扫描的子件条码长度有误！</string>
    <string name="commit_success">提交成功</string>
    <string name="commit_fail">提交失败</string>
    <string name="start_flow_error">发起流程失败</string>
    <string name="zhuzhou_print_server">株洲条码打印服务器102</string>
    <string name="guanjiao_flow">灌胶外观维修确认流程</string>
    <string name="please_scan_code_pass_fail">请扫描PASS或者FAIL</string>
    <string name="tool">工装：</string>
    <string name="code">条码</string>
    <string name="main">主</string>
    <string name="bind">绑定</string>
    <string name="children">子</string>
    <string name="day_work">白班</string>
    <string name="night_work">夜班</string>
    <string name="task_order_code">生产任务</string>
    <string name="feeder_old">旧飞达</string>
    <string name="feeder_new">新飞达</string>
    <string name="out_task_order_code">转出工单</string>
    <string name="in_task_order_code">转入工单</string>
    <string name="diversion_code">申请编码</string>
    <string name="quantity">数量</string>
    <string name="lot_number">条码信息</string>
    <string name="lot">批次号</string>
    <string name="cannot_get_data">没有获取到数据</string>
    <string name="please_scan_code_first">请先扫描条码</string>
    <string name="error_no_this_wo_issue">没有这个工单这个条码的发料记录,或者已经退完。</string>
    <string name="sure_to_commit">确定要提交吗？</string>
    <string name="not_thie_same_itemcode">不是同一个料</string>
    <string name="number_is_less">扫描的数量比挪料的数量少，请换一个批次的料操作</string>
    <string name="mes">MEGMEET移动企业管理平台</string>
    <string name="first_item">第一条记录</string>
    <string name="last_item">最后一条记录</string>
    <string name="had_version_item_count">已转数量</string>
    <string name="input_quantity_is_more">当前挪料数量大于所需数量</string>
    <string name="cur_quantity">本次数量</string>
    <string name="choose_to_delete">请选择需要删除的条码信息</string>
    <string name="have_commited">已经提审核了</string>
    <string name="please_scan_user_first">请先扫描作业人员</string>
    <string name="scan_error_worker_not_exist">扫描的作业人员没有维护或者已经离职。</string>
    <string name="set_user_success">设置作业人员成功</string>
    <string name="cannot_be_null">不能为空</string>
    <string name="test_code">测试单号</string>
    <string name="first_code">首件单号</string>
    <string name="first_type">首件类型</string>

    <string name="item_test_type1">新机种试产</string>
    <string name="item_test_type2">每日开拉检查</string>
    <string name="item_test_type3">设备故障调试</string>
    <string name="item_test_type4">人员更换</string>
    <string name="item_test_type5">新拖工生产</string>
    <string name="item_test_type6">返工工单</string>
    <string name="item_test_type7">ECN、物料代用执行</string>
    <string name="load_error">加载失败</string>
    <string name="caogao">草稿</string>
    <string name="ask">询问</string>
    <string name="save_confirm">是否保存</string>
    <string name="choose_first_type_first">请先选择首件类型</string>
    <string name="choose_result_first">请先选择最终判定结果</string>
    <string name="test_electric">电性测试</string>
    <string name="test">测试</string>
    <string name="feeder_code">飞达编码</string>
    <string name="online_count_zero">上料数量为0</string>
    <string name="online_count_less_than_zero">上料数量为负数</string>
    <string name="vendor_name">供应商名称</string>
    <string name="wh">位号</string>
    <string name="check_user">确认员</string>
    <string name="vendor_model">供应商</string>
    <string name="vendor_lot">供应商编码</string>
    <string name="warehouse">位置</string>
    <string name="work_line">线体</string>
    <string name="work_user">作业员：</string>
    <string name="plan_quantity">工单批量</string>
    <string name="online_time">上线时间：</string>
    <string name="process_method">加工方式：</string>
    <string name="status">状态：</string>
    <string name="remark">备注</string>
    <string name="ipqc">IPQC</string>
    <string name="machine_code">机台编码</string>
    <string name="time_counts">累计时间：</string>
    <string name="please_input_right_number">请输入正确的数值</string>
    <string name="notication">提示</string>
    <string name="please_input_number">请输入数量</string>

</resources>
